fontIntro, globalLinkStyles and linkToResourceStyles

--- a/index.html
+++ b/index.html
@@ -2,21 +2,21 @@
 <html lang="ru">
   <head>
     <meta charset="UTF-8" />
-    <title>js-learn.page</title>
+    <title>Little Form</title>
     <link href="css/index.css" type="text/css" rel="stylesheet" />
     <script href="js/index.js" ></script>
   </head>
   <body>
-    <p>Идею "дизайна" блока и input'ов я взяла, глянув на один из примеров на сайте: https://beta.reactjs.org/learn/sharing-state-between-components</p>
+    <p>Идею "дизайна" блока и input'ов я взяла, глянув на один из примеров на сайте: <a tabindex="1" href="https://beta.reactjs.org/learn/sharing-state-between-components" >https://beta.reactjs.org/learn/sharing-state-between-components</a>.</p>
     <div class="blockWithBorders" >
       <p>isActive</p>
     </div>
     <div>
       <form action="#" method="post" >
         <span class="formName" >Форма</span><br />
-        <input class="blockWithBorders inputStyles" tabindex="1" type="text" placeholder="Your name" name="username" maxlength="18" /><br />
-        <input class="blockWithBorders inputStyles" tabindex="2" type="password" placeholder="Your pass" name="usernpass" maxlength="20" /><br />
-        <input class="blockWithBorders inputStyles buttonStyles" tabindex="3" class="blockWithBorders buttonStyles" type="submit" value="Submit" />
+        <input class="blockWithBorders inputStyles" tabindex="2" type="text" placeholder="Your name" name="username" maxlength="18" /><br />
+        <input class="blockWithBorders inputStyles" tabindex="3" type="password" placeholder="Your pass" name="usernpass" maxlength="20" /><br />
+        <input class="blockWithBorders inputStyles buttonStyles" tabindex="4" class="blockWithBorders buttonStyles" type="submit" value="Submit" />
       </form>
     </div>
  </body>
